--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <article>
                         <img src="img/card-treatments.jpeg" alt="Närbild på händer som droppar eterisk olja i ena handflatan.">
                         <h3>Behandlingar</h3>
-                        <p>Massage och ansiktsbehandlingar med naturliga oljor</p>
+                        <p>Massage och ansiktsbehandlingar med naturliga oljor.</p>
                     </article>
                 </a>
             </div>
