--- a/offers.html
+++ b/offers.html
@@ -114,7 +114,7 @@
                             <img src="img/card-evening-serenity.jpeg" alt="En tallrik med mat som ställs fram på ett bord.">
                             <div class="text-overlay">
                                 <h3>Evening Serenity</h3>
-                                <p>Spa, middag och stillhet i kvällsljus..</p>
+                                <p>Spa, middag och stillhet i kvällsljus.</p>
                             </div>
                         </div>
                     </a>
